move fetch to function

--- a/new-output.html
+++ b/new-output.html
@@ -1,14 +1,44 @@
 <!DOCTYPE html>
+<!-- saved from url=(0067)file:///Users/sriramsivarajah/Dev/cca_forecast_legacy_js/index.html -->
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daily Forecast Summary</title>
 </head>
 
 <body onload="main()">
-    <div id="forecast-summaries"></div>
+    <div id="forecast-summaries">
+        <div>
+            <h3>Day: Sunday, 18 February</h3>
+            <p>Morning Average Temperature: 9.83</p>
+            <p>Morning Chance Of Rain: 0.14%</p>
+            <p>Afternoon Average Temperature: 16.17</p>
+            <p>Afternoon Chance Of Rain: 0.40%</p>
+            <p>High Temperature: 17</p>
+            <p>Low Temperature: 6</p>
+        </div>
+        <div>
+            <h3>Day: Monday, 19 February</h3>
+            <p>Morning Average Temperature: 9.83</p>
+            <p>Morning Chance Of Rain: 0.14%</p>
+            <p>Afternoon Average Temperature: 16.17</p>
+            <p>Afternoon Chance Of Rain: 0.40%</p>
+            <p>High Temperature: 17</p>
+            <p>Low Temperature: 6</p>
+        </div>
+        <div>
+            <h3>Day: Tuesday, 20 February</h3>
+            <p>Morning Average Temperature: 9.83</p>
+            <p>Morning Chance Of Rain: 0.14%</p>
+            <p>Afternoon Average Temperature: 16.17</p>
+            <p>Afternoon Chance Of Rain: 0.40%</p>
+            <p>High Temperature: 17</p>
+            <p>Low Temperature: 6</p>
+        </div>
+    </div>
 
     <script>
         async function fetchData() {
@@ -76,6 +106,8 @@
             }
         }
     </script>
+
+
 </body>
 
 </html>
