--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
             }
         }
 
+        function average(nums, unit = "") {
+            if (!nums.length) return "Insufficient forecast data";
+
+            const total = nums.reduce((acc, num) => acc + num);
+            const average = (total / nums.length).toFixed(2);
+
+            return unit ? `${average} ${unit}` : average;
+        }
+
+
         async function main() {
             try {
                 const weatherData = await fetchData();
@@ -63,7 +73,7 @@
                         month: 'long',
                         day: 'numeric'
                     })}</h3>
-                    <p>Morning Average Temperature: ${morningTemps.length ? (morningTemps.reduce((a, b) => a + b, 0) / morningTemps.length).toFixed(2) : 'Insufficient forecast data'}</p>
+                    <p>Morning Average Temperature: ${average(morningTemps)}</p>
                     <p>Morning Chance Of Rain: ${morningRains.length ? (morningRains.reduce((a, b) => a + b, 0) / morningRains.length).toFixed(2) + '%' : 'Insufficient forecast data'}</p>
                     <p>Afternoon Average Temperature: ${afternoonTemps.length ? (afternoonTemps.reduce((a, b) => a + b, 0) / afternoonTemps.length).toFixed(2) : 'Insufficient forecast data'}</p>
                     <p>Afternoon Chance Of Rain: ${afternoonRains.length ? (afternoonRains.reduce((a, b) => a + b, 0) / afternoonRains.length).toFixed(2) + '%' : 'Insufficient forecast data'}</p>
